<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Black Card Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helperInGame"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0">

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:text="@string/left" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Status"
                android:id="@+id/textViewStatus"
                android:visibility="visible"/>

            <Button
                android:id="@+id/buttonCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/whiteT"
                android:text="white text"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewAditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="55dp"
                android:textColor="@color/white"
                android:visibility="visible"
                android:text="1/7" />


        </LinearLayout>
        <Button
            android:id="@+id/buttonRight"
            android:layout_height="fill_parent"
            android:text="@string/right"
            android:layout_width="wrap_content" />






    </LinearLayout>
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:visibility="visible" />





</LinearLayout>